--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=dms
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdmsdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=root
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.path=/h2
