--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password=root
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.path=/h2
+
+# Aumentando o tamanho máximo de upload de arquivos
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
